--- a/index.html
+++ b/index.html
@@ -53,26 +53,11 @@
     </div>
     <div id=Follow class="card">
       <h3>Follow Me:</h3>
-	<pre>
-Reddit:
-/r/BizarreAndroid
-	
-Twitter:
-@Gadget_9835
-	
-Instagram:
-@Mitchell_9835
-	</pre>
+	    <p>Follow Me Links Here</p>
     </div>
     <div id=share class="card">
      <h3>Crypto Addresses</h3>
-	<pre>
-BTC: 17t8CwJGzbjURqASZvuztMWQf8fdsYSAZ6
-
-ETH: 0xe3494f461454f29dbe64fb6a195e0bac774f453f
-
-BCH: qp9hh77ajqgvtkah3844s0j7t3vyfp7mtv0geg4l6a
-	</pre>
+	    <p>crypto addresses here</p>
    </div>
   </div>
 </div>
