--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,6 @@
  <script src="script.js"></script> 
 </head>
 <body>
-
-<div class="topnav">
-  <a href="#share">Share</a>
-  <a href="#Follow">Follow Me</a>
-  <a href="#">Link</a>
-  <a href="contact.html" style="float:right">Contact Me</a>
-</div>
-
 <div class="header">
   <img src="images/header.jpg"/>
 </div>
@@ -30,7 +22,7 @@
 				<center>	
 					<h1>Contact Us</h1>
 					<p>Office Address:</p> 
-					<p>22 MadeUp Road Winderfarm Kieth CSD I£)</p>
+					<p>22 MadeUp Road Winderfarm Kieth CSD IÂ£)</p>
 					<p>Telephone: 123456789</p>
 					<p>Mobile: 987654321</p>
 					<p>
