--- a/page2.html
+++ b/page2.html
@@ -13,7 +13,7 @@
   <a href="index.html">Home </a>
   <a href="#">Link</a>
   <a href="#">Link</a>
-  <a href="#" style="float:right">Link</a>
+  <a href="contact.html" style="float:right">Contact Me</a>
 </div>
 
 <div class="header">
