--- a/2/index.html
+++ b/2/index.html
@@ -2,9 +2,9 @@
 	<head>
 		<title>Gallery</title>
 		<link rel="stylesheet" type="text/css" href="styles.css" />
-		
+		<link href='https://fonts.googleapis.com/css?family=Aguafina Script' rel='stylesheet'>		
 	</head>
-	<body>
+	<body font-family: 'Aguafina Script';font-size: 22px;>
 
 <script type="text/javascript">
 window._idl = {};
