--- a/2/index.html
+++ b/2/index.html
@@ -2,21 +2,8 @@
 	<head>
 		<title>Gallery</title>
 		<link rel="stylesheet" type="text/css" href="styles.css" />
-		<link href='https://fonts.googleapis.com/css?family=Aguafina Script' rel='stylesheet'>		
 	</head>
-	<body font-family: 'Aguafina Script';font-size: 22px;>
-
-<script type="text/javascript">
-window._idl = {};
-_idl.variant = "modal";
-(function() {
-    var idl = document.createElement('script');
-    idl.async = true;
-    idl.src = 'https://members.internetdefenseleague.org/include/?url=' + (_idl.url || '') + '&campaign=' + (_idl.campaign || '') + '&variant=' + (_idl.variant || 'modal');
-    document.getElementsByTagName('body')[0].appendChild(idl);
-})();
-</script>
-			
+	<body>
 		<table border ="0px" width="100%">
 			<tr>
 				<td class="top">
