--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 </head>
 <body>
-   <a href="http://majorwolf1.github.io">HTML 1</a>
+   <a href="http://majorwolf1.github.io/1/">HTML 1</a>
    <a href="http://majorwolf1.github.io/2/">HTML 1</a>
 </body>
 </html
