Update and rename test.html to index.html

--- a/4/index.html
+++ b/4/index.html
@@ -15,7 +15,7 @@
 			<a href="#about" class="transparent_btn">About Me</a>
 			<a href="#contact" class="transparent_btn">Contact Information</a>
 			<a href="#crypto" class="transparent_btn">Crypto Addresses</a>
-			<a href="#" class="transparent_btn">White Button</a>
+			<a href="#" class="transparent_btn">Other</a>
 		</div>
 
 	</div> 
@@ -38,13 +38,13 @@
 			<h1>Contact Info</h1>	
 			<p>You are able to get in contact with me via a few resources.</p>
 			</br>
-			<p>Reddit: /r/BizarreAndroid</p>
+			<p>Reddit: (Reddit Handle)</p>
 			</br>
-			<p>Twitter: @Gadget_9835</p>
+			<p>Twitter: (Twitter Handle)</p>
 			</br>
-			<p>Instagram: @Mitchell_9835</p>
+			<p>Instagram: (Insta Handle)</p>
 			</br>
-			<p>I would susggest contacting me via Reddit, as that is where I'm most active, but either way is fine.</p>
+			<p>I would suggest contacting me via Reddit, as that is where I'm most active, but either way is fine.</p>
 		</center> 
 	</div>
 
