--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <body>
    <a href="http://majorwolf1.github.io/1/">HTML 1</a>
    <a href="http://majorwolf1.github.io/2/">HTML 2</a>
-</body>
+   <a href="http://majorwolf1.github.io/3/">HTML 3</a>
+   <a href="http://majorwolf1.github.io/4/">HTML 4</a>
+   </body>
 </html
 
