--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <a href="http://majorwolf1.github.io/2/">HTML 2</a>
    <a href="http://majorwolf1.github.io/3/">HTML 3</a>
    <a href="http://majorwolf1.github.io/4/">HTML 4</a>
+   <a href="http://majorwolf1.github.io/4/test.html">If No. 4 Doesnt Work Please use this one.</a>
    </body>
 </html
 
