--- a/3/index.html
+++ b/3/index.html
@@ -34,7 +34,7 @@
       <div class="fakeimg"><img src="images/m1.jpg"/></div>
 
 
-      <p>Some text..</p>
+      <p>Try Clicking the images and see what happens.</p>
       <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
     </div>
     <div class="card">
@@ -42,7 +42,7 @@
       <h5>Title description, Sep 2, 2017</h5>
       <div class="fakeimg"><img src="images/rr1.jpeg"/></div>
 
-      <p>Some text..</p>
+      <p>Try Clicking the images and see what happens.</p>
       <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
     </div>
   </div>
@@ -68,15 +68,15 @@
       <h3>Follow Me:</h3>
 	<p>
 		Reddit:
-		/r/BizarreAndroid
+		(Reddit Handle)
 	</p>
 	<p>
 		Twitter:
-		@Gadget_9835
+		(Twitter Handle)
 	</p>
 	<p>	
 		Instagram:
-		Mitchell_9835
+		(Insta Handle)
 	</p>
 </div>
     </div>
