--- a/4/index.html
+++ b/4/index.html
@@ -75,6 +75,7 @@
 	<div class="footer">
 			<p>Posted by: MajorWolf1</p>
   			<p>Contact information: <a href="mailto:someone@example.com">someone@example.com</a>.</p>
+			<a href="https://internetdefenseleague.org"><img src="https://internetdefenseleague.org/images/badges/final/footer_badge.png" alt="Member of The Internet Defense League"/></a>
 	</div>
 </body>
 </html>
