--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
    <a href="http://majorwolf1.github.io/3/">HTML 3</a>
    <a href="http://majorwolf1.github.io/4/">HTML 4</a>
    <a href="http://majorwolf1.github.io/4/test.html">If No. 4 Doesnt Work Please use this one.</a>
+   <a href="http://majorwolf1.github.io/5/">HTML 5</a>
+
    </body>
 </html
 
